--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             </ul>
             <div class="buttons">
                 <button>
-                    Register
+                    <a href="#">Register</a>
                 </button>
                 <button>
-                    Login
+                    <a href="#">Login</a>
                 </button>
             </div>
         </nav>
@@ -115,15 +115,350 @@
                         </select>
                     </div>
                 </section>
-                <!-- <div class="pagination">
-                    <ul>
-                        <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
-                        <li>></li>
-                    </ul>
-                </div> -->
+                <section class="middle-container">
+                    <div class="card-container">
+                        <div class="card-preview">
+                            <a href="#">
+                                <img src="./images/cards/img1.jpg" alt="card-theme">
+                            </a>
+                        </div>
+                        <div class="card-details">
+                            <p class="short-tile">
+                                Fourniture website
+                            </p>
+                            <p class="short-price">
+                                $ 30.00
+                            </p>
+                        </div>
+                        <div class="card-additions">
+                            <label for="rate">
+                                <input type="range" min="0" max="5" value="0">
+                            </label>
+                            <div>
+                                12
+                                <span>
+                                    Reviews
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-preview">
+                            <a href="#">
+                                <img src="./images/cards/img2.jpg" alt="card-theme">
+                            </a>
+                        </div>
+                        <div class="card-details">
+                            <p class="short-tile">
+                                Acessories website template
+                            </p>
+                            <p class="short-price">
+                                $ 19.99
+                            </p>
+                        </div>
+                        <div class="card-additions">
+                            <label for="rate">
+                                <input type="range" min="0" max="5" value="0">
+                            </label>
+                            <div>
+                                7
+                                <span>
+                                    Reviews
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-preview">
+                            <a href="#">
+                                <img src="./images/cards/img3.jpg" alt="card-theme">
+                            </a>
+                        </div>
+                        <div class="card-details">
+                            <p class="short-tile">
+                                Blog template
+                            </p>
+                            <p class="short-price">
+                                $ 12.90
+                            </p>
+                        </div>
+                        <div class="card-additions">
+                            <label for="rate">
+                                <input type="range" min="0" max="5" value="0">
+                            </label>
+                            <div>
+                                3
+                                <span>
+                                    Reviews
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-preview">
+                            <a href="#">
+                                <img src="./images/cards/img4.jpg" alt="card-theme">
+                            </a>
+                        </div>
+                        <div class="card-details">
+                            <p class="short-tile">
+                                Watches E-Commerce template
+                            </p>
+                            <p class="short-price">
+                                $ 45.99
+                            </p>
+                        </div>
+                        <div class="card-additions">
+                            <label for="rate">
+                                <input type="range" min="0" max="5" value="0">
+                            </label>
+                            <div>
+                                116 Reviews
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-preview">
+                            <a href="#">
+                                <img src="./images/cards/img5.jpg" alt="card-theme">
+                            </a>
+                        </div>
+                        <div class="card-details">
+                            <p class="short-tile">
+                                Pet shop website template
+                            </p>
+                            <p class="short-price">
+                                $ 25.99
+                            </p>
+                        </div>
+                        <div class="card-additions">
+                            <label for="rate">
+                                <input type="range" min="0" max="5" value="0">
+                            </label>
+                            <div>
+                                72 Reviews
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-preview">
+                            <a href="#">
+                                <img src="./images/cards/img6.jpg" alt="card-theme">
+                            </a>
+                        </div>
+                        <div class="card-details">
+                            <p class="short-tile">
+                                tech landing page template
+                            </p>
+                            <p class="short-price">
+                                $ 29.99
+                            </p>
+                        </div>
+                        <div class="card-additions">
+                            <label for="rate">
+                                <input type="range" min="0" max="5" value="0">
+                            </label>
+                            <div>
+                                82 Reviews
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-preview">
+                            <a href="#">
+                                <img src="./images/cards/img7.jpg" alt="card-theme">
+                            </a>
+                        </div>
+                        <div class="card-details">
+                            <p class="short-tile">
+                                kids circle camp site template
+                            </p>
+                            <p class="short-price">
+                                $ 19.99
+                            </p>
+                        </div>
+                        <div class="card-additions">
+                            <label for="rate">
+                                <input type="range" min="0" max="5" value="0">
+                            </label>
+                            <div>
+                                56 Reviews
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-preview">
+                            <a href="#">
+                                <img src="./images/cards/img8.jpg" alt="card-theme">
+                            </a>
+                        </div>
+                        <div class="card-details">
+                            <p class="short-tile">
+                                artesanal natural oil shop site template
+                            </p>
+                            <p class="short-price">
+                                $ 34.99
+                            </p>
+                        </div>
+                        <div class="card-additions">
+                            <label for="rate">
+                                <input type="range" min="0" max="5" value="0">
+                            </label>
+                            <div>
+                                43 Reviews
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-preview">
+                            <a href="#">
+                                <img src="./images/cards/img9.jpg" alt="card-theme">
+                            </a>
+                        </div>
+                        <div class="card-details">
+                            <p class="short-tile">
+                                sales blog landing page template
+                            </p>
+                            <p class="short-price">
+                                $ 15.50
+                            </p>
+                        </div>
+                        <div class="card-additions">
+                            <label for="rate">
+                                <input type="range" min="0" max="5" value="0">
+                            </label>
+                            <div>
+                                87 Reviews
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-preview">
+                            <a href="#">
+                                <img src="./images/cards/img10.jpg" alt="card-theme">
+                            </a>
+                        </div>
+                        <div class="card-details">
+                            <p class="short-tile">
+                                Nature basic blog template
+                            </p>
+                            <p class="short-price">
+                                $ 10.30
+                            </p>
+                        </div>
+                        <div class="card-additions">
+                            <label for="rate">
+                                <input type="range" min="0" max="5" value="0">
+                            </label>
+                            <div>
+                                23 Reviews
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-preview">
+                            <a href="#">
+                                <img src="./images/cards/img11.jpg" alt="card-theme">
+                            </a>
+                        </div>
+                        <div class="card-details">
+                            <p class="short-tile">
+                                Skin Treatment & shinny blog template
+                            </p>
+                            <p class="short-price">
+                                $ 22.99
+                            </p>
+                        </div>
+                        <div class="card-additions">
+                            <label for="rate">
+                                <input type="range" min="0" max="5" value="0">
+                            </label>
+                            <div>
+                                229 Reviews
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-preview">
+                            <a href="#">
+                                <img src="./images/cards/img12.jpg" alt="card-theme">
+                            </a>
+                        </div>
+                        <div class="card-details">
+                            <p class="short-tile">
+                                Beauty blog landing page template
+                            </p>
+                            <p class="short-price">
+                                $ 15.99
+                            </p>
+                        </div>
+                        <div class="card-additions">
+                            <label for="rate">
+                                <input type="range" min="0" max="5" value="0">
+                            </label>
+                            <div>
+                                47 Reviews
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-preview">
+                            <a href="#">
+                                <img src="./images/cards/img13.jpg" alt="card-theme">
+                            </a>
+                        </div>
+                        <div class="card-details">
+                            <p class="short-tile">
+                                Cosmetics full E-Commerce site template
+                            </p>
+                            <p class="short-price">
+                                $ 55.90
+                            </p>
+                        </div>
+                        <div class="card-additions">
+                            <label for="rate">
+                                <input type="range" min="0" max="5" value="0">
+                            </label>
+                            <div>
+                                445 Reviews
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container">
+                        <div class="card-preview">
+                            <a href="#">
+                                <img src="./images/cards/img14.jpg" alt="card-theme">
+                            </a>
+                        </div>
+                        <div class="card-details">
+                            <p class="short-tile">
+                                Love nature blog template
+                            </p>
+                            <p class="short-price">
+                                $ 24.99
+                            </p>
+                        </div>
+                        <div class="card-additions">
+                            <label for="rate">
+                                <input type="range" min="0" max="5" value="0">
+                            </label>
+                            <div>
+                                68 Reviews
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="base-container">
+                    <!-- <div class="pagination">
+                        <ul>
+                            <li>1</li>
+                            <li>2</li>
+                            <li>3</li>
+                            <li>4</li>
+                            <li>></li>
+                        </ul>
+                    </div> -->
+                </section>
             </article>
 
         </section>
@@ -135,11 +470,11 @@
                     Marketplace
                 </div>
                 <ul>
-                    <li>Marketplace</li>
-                    <li>Features</li>
-                    <li>Showcase</li>
-                    <li>Download</li>
-                    <li>Login</li>
+                    <li><a href="#">Marketplace</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Showcase</a></li>
+                    <li><a href="#">Download</a></li>
+                    <li><a href="#">Login</a></li>
                 </ul>
             </section>
             <section>
@@ -147,11 +482,11 @@
                     Company
                 </div>
                 <ul>
-                    <li>Contact Us</li>
-                    <li>Extension Adversiting</li>
-                    <li>Marketplace Adversiting</li>
-                    <li>About Us</li>
-                    <li>Extension Developer</li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Extension Adversiting</a></li>
+                    <li><a href="#">Marketplace Adversiting</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Extension Developer</a></li>
                 </ul>
             </section>
             
@@ -160,11 +495,11 @@
                     Support
                 </div>
                 <ul>
-                    <li>Community Form</li>
-                    <li>Dedicated Support</li>
-                    <li>Marketplace Partners</li>
-                    <li>Marketplace Support</li>
-                    <li>Migrate to Marketplace</li>
+                    <li><a href="#">Community Form</a></li>
+                    <li><a href="#">Dedicated Support</a></li>
+                    <li><a href="#">Marketplace Partners</a></li>
+                    <li><a href="#">Marketplace Support</a></li>
+                    <li><a href="#">Migrate to Marketplace</a></li>
                 </ul>
             </section>
             <section>
@@ -172,11 +507,11 @@
                     Resources
                 </div>
                 <ul>
-                    <li>Marketplace Blog</li>
-                    <li>Marketplace Documentation</li>
-                    <li>Marketplace Books</li>
-                    <li>Github BugTraker</li>
-                    <li>Developer</li>
+                    <li><a href="#">Marketplace Blog</a></li>
+                    <li><a href="#">Marketplace Documentation</a></li>
+                    <li><a href="#">Marketplace Books</a></li>
+                    <li><a href="#">Github BugTraker</a></li>
+                    <li><a href="#">Developer</a></li>
                 </ul>
             </section>
             <section>
