--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="" rel="favicon">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&display=swap"
+		rel="stylesheet">
 	<link href="./css/lib/reset.css" type="text/css" rel="stylesheet">
 	<link href="./css/lib/normalize.css" type="text/css" rel="stylesheet">
 	<link href="./css/main.css" type="text/css" rel="stylesheet">
